# IPTV-Scanner-Editor-Pro

./: .config_cache  .gitattributes  .gitignore  .iptv_manager.ini  .scan_address_cache  1.m3u  LICENSE  README.md  Telecom-Shandong-Multicast.m3u  _commit_msg.txt  _commit_msg2.txt  _commit_msg3.txt  _msg_filter.py  _test_search.py  _test_subhd.py  about_dialog.py  android_bridge.py  async_utils.py  auto_refactor.py  build - 副本.bat  build.bat  build.py  channel_fingerprints.json  channel_mappings.py  channel_mappings.py.bak  channel_mappings_cache.json  channel_mappings_cache.json.etag  channel_model.py  channels.json  config.ini  config_manager.py  create_logo.py  debug_refresh.py  epg_manager.py  epg_model.py  epg_ui.py  error_handler.py  ffprobe_utils.py  flet_player.py  floating_panels.txt  (+82 more)
.arts/: settings.json
android/: build.gradle  extract_mpv_native.py  settings.gradle
cache/: playlist_cache.m3u
controllers/: __init__.py  bookmark_controller.py  catchup_controller.py  channel_controller.py  epg_controller.py  epg_reminder_controller.py  event_handler.py  favorites_controller.py  file_queue_controller.py  main_window_protocol.py  media_controller.py  mini_mode_controller.py  multi_screen_controller.py  pip_controller.py  playback_controller.py  playback_settings_controller.py  progress_controller.py  resume_playback_controller.py  settings_file_ops.py  skip_intro_outro_controller.py  subscription_controller.py  subscription_ui_controller.py  ui_controller.py  update_controller.py  window_controller.py
core/: IPTV-Scanner-Editor-Pro.code-workspace  application.py  application_state.py  config_manager.py  epg_parser.py  event_bus.py  language_manager.py  log_manager.py  panel_visibility.py  play_state.py  playback_settings_store.py  subscription_manager.py  version.py
epg-xml/: local_epg.xml
icons/: a.py
locales/: en.json  zh.json
logo_cache/: meta.json
mixins/: __init__.py  channel_mixin.py  control_panel_mixin.py  epg_mixin.py  event_mixin.py  file_ops_mixin.py  panel_mixin.py  playback_mixin.py  playlist_panel_mixin.py  progress_mixin.py  server_mixin.py  settings_mixin.py  thumbnail_mixin.py  tray_mixin.py  update_mixin.py  window_mixin.py
models/: channel_mappings.py  (+1 more)
(+197 files in other folders)
